# boston-house-pricing-end-to-end

./: .dockerignore  Boston House Price Prediction.ipynb  Dockerfile  README.md  app.py  application.py  buildspec.yml  pyproject.toml  regression.pkl  requirements.txt  scaling.pkl  test.ipynb
.ebextensions/: python.config
.github/workflows/: deploy-eb.yaml  main.yaml
Templates/: home.html
static/: styles.css
